--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
     "fast-sass-loader": "^1.2.5",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
@@ -41,6 +42,8 @@
     "react-dom": "^15.5.4",
     "react-svg-loader": "^1.1.1",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "svg-react-loader": "^0.4.3",
     "webpack": "^2.6.1",
     "webpack-bundle-tracker": "^0.2.0",
     "webpack-cleanup-plugin": "^0.5.1",
